tests/typedd-book/chapter10/expected
1/1: Building DLFail (DLFail.idr)
Error: While processing left hand side of describe_list_end. Can't match on ?xs ++ [?x] (Not a constructor application or primitive).

DLFail.idr:3:23--3:25
 1 | describe_list_end : List Int -> String
 2 | describe_list_end [] = "Empty"
 3 | describe_list_end (xs ++ [x]) = "Non-empty, initial portion = " ++ show xs
                           ^^

1 /13: Building DataStore (DataStore.idr)
2 /13: Building DescribeList (DescribeList.idr)
3 /13: Building DescribeList2 (DescribeList2.idr)
4 /13: Building IsSuffix (IsSuffix.idr)
5 /13: Building MergeSort (MergeSort.idr)
6 /13: Building MergeSortView (MergeSortView.idr)
7 /13: Building Reverse (Reverse.idr)
8 /13: Building ReverseSnoc (ReverseSnoc.idr)
9 /13: Building Shape (Shape.idr)
10/13: Building Shape_abs (Shape_abs.idr)
11/13: Building SnocList (SnocList.idr)
12/13: Building TestStore (TestStore.idr)
13/13: Building All (All.idr)
